syntax = "proto3";

package knowdateapp.user.v1.auth;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/knowdateapp/knowdateapp/backend/user/internal/pb/api/v1/auth";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth Service"
    version: "0.0.1"
  }
};

service AuthService {

  rpc LoginAnonymousUser(LoginAnonymousUserRequest) returns (LoginAnonymousUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/login/anonymous"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "LoginAnonymousUser"
    };
  }

}

message LoginAnonymousUserRequest {
  // TODO: Make the handler more secure.
  string id = 1;
}

message LoginAnonymousUserResponse {
  string token = 1;
  string refresh_token = 2;
}
